<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_poster_movie"
        style="@style/Custom.CardView"
        android:layout_width="100dp"
        android:layout_height="150dp"
        app:cardCornerRadius="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/light_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_poster_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/text_poster_movie"
            android:scaleType="centerCrop" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_title_movie"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/text_title_movie"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/cb_favorite"
        app:layout_constraintStart_toEndOf="@+id/cv_poster_movie"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cb_favorite"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:button="@drawable/sl_favorite"
        app:buttonTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_star"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/text_rating"
        android:src="@drawable/ic_star"
        app:layout_constraintStart_toEndOf="@+id/cv_poster_movie"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />

    <TextView
        android:id="@+id/tv_rating_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_rating"
        android:textSize="14sp"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_star"
        app:layout_constraintStart_toEndOf="@+id/iv_star"
        app:layout_constraintTop_toTopOf="@+id/iv_star" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:maxLines="1"
        android:text="@string/text_date"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/cv_poster_movie"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_movie" />

    <TextView
        android:id="@+id/tv_description_movie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:text="@string/text_lorem_ipsum"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster_movie"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating_movie" />


</androidx.constraintlayout.widget.ConstraintLayout>