<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimary"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_gap"
        android:layout_width="16dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/tv_title_movie"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/text_title_movie"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster_movie"
        app:layout_constraintTop_toBottomOf="@+id/cv_backdrop_movie" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_backdrop_movie"
        style="@style/Custom.CardView"
        android:layout_width="360dp"
        android:layout_height="200dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/light_black"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_gap"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_backdrop_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/text_backdrop_movie"
            android:scaleType="centerCrop" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_poster_movie"
        style="@style/Custom.CardView"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="32dp"
        app:cardBackgroundColor="@color/light_black"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toEndOf="@+id/iv_gap"
        app:layout_constraintTop_toTopOf="@+id/cv_backdrop_movie">

        <ImageView
            android:id="@+id/iv_poster_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/text_poster_movie"
            android:scaleType="centerCrop" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>